# qvplayer

./: .gitignore  CMakeLists.txt
qrc/: main.qrc  qvplayer.desktop
src/: audiotablemodel.cpp  audiotablemodel.h  main.cpp  qaudiolistmodel.cpp  qaudiolistmodel.h  qvplayer.cpp  qvplayer.h
ts/: de.ts  en.ts  ru.ts  ua.ts
ui/: qvplayer.ui
